create .env file